# iceworx

./: .cspell.json  .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.md  README.md  dprint.json  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  cross.yml  package.yml  release.yml
examples/icewerx/: icewerx.pcf
examples/icewerx/00-blinky/: .gitignore  README.md  blinky.v  justfile
examples/icewerx/01-blinky-amaranth/: .gitignore  README.md  blinky.py  build.py  justfile  platform.py  requirements.txt  testbench.py
examples/icewerx/01-blinky-bluespec/: .gitignore  Blinky.bsv  README.md  TestBench.bsv  blinky.gtkw  justfile
examples/icewerx/01-blinky-cxxrtl/: .gitignore  README.md  blinky.gtkw  justfile  tb.cpp
examples/icewerx/01-blinky-iverilog/: .gitignore  README.md  blinky-bench.v  blinky.gtkw  justfile
examples/icewerx/01-blinky-verilator/: .gitignore  README.md  blinky.gtkw  blinky.v  justfile  tb.cpp
src/: bin.rs  bitstream.rs  bitstream_test.rs  error.rs  lib.rs  log.rs  parse.rs  parse_test.rs  serial.rs  task.rs
src/task/: boards_task.rs  flash_task.rs
