[package]
name = "iceworx"
version = "0.1.0"
authors = [
  "Guillaume 'Yugo' Coguiec <mail@gcoguiec.com>",
]
categories = [
  "command-line-utilities",
  "development-tools",
  "embedded",
]
edition = "2021"
keywords = [
  "cli",
  "embedded",
  "icewerx",
  "icefun",
]
license = "BSD-2-Clause"
publish = false
repository = "https://github.com/gcoguiec/iceworx/"
rust-version = "1.65"
description = "Flasher utility for the iceWerx iCE40 FPGA boards"

[[bin]]
name = "iceworx"
path = "src/bin.rs"

[lib]
name = "iceworx"
path = "src/lib.rs"

[dependencies]
async-trait = { version = "0.1.57" }
clap = { version = "3.2.19", features = ["cargo"] }
indicatif = { version = "0.17.0" }
log = { version = "0.4.17" }
miette = { version = "5.3.0", features = ["fancy"] }
num-traits = { version = "0.2.15", default-features = false }
serialport = { version = "4.2.0" }
strum_macros = { version = "0.24.1" }
tabled = { version = "0.8.0" }
thiserror = { version = "1.0.34" }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.36" }
tracing-log = { version = "0.1.3" }
tracing-subscriber = { version = "0.3.15" }

[dev-dependencies]
insta = { version = "1.19.1" }
tempfile = { version = "3.3.0" }

[profile.release]
strip = true
opt-level = 3
lto = "thin"
